# LocalPdfToolkit

./: .gitignore  Cargo.toml  LICENSE  LocalPdfToolkitSDD.md  PHASE_1_COMPLETE.md  README.md  VERIFICATION_REPORT.md  tauri.conf.json
.github/workflows/: build.yml  release.yml
crates/localpdf-app/: Cargo.toml  tauri.conf.json
crates/localpdf-app/capabilities/: default.json
crates/localpdf-app/icons/: icon.icns
crates/localpdf-app/permissions/: custom-commands.toml  default.toml
crates/localpdf-app/src/: main.rs  state.rs
crates/localpdf-app/src/commands/: convert.rs  edit.rs  mod.rs  ocr.rs  organize.rs  security.rs  utility.rs
crates/localpdf-cli/: Cargo.toml
crates/localpdf-cli/src/: cli.rs  common_test.rs  main.rs  update.rs
crates/localpdf-core/: Cargo.toml
crates/localpdf-core/src/: bin_test.rs  error.rs  lib.rs  types.rs
crates/localpdf-core/src/convert/: docx_to_pdf.rs  html_to_pdf.rs  images_to_pdf.rs  mod.rs  pdf_to_docx.rs  pdf_to_html.rs  pdf_to_images.rs  pdf_to_pptx.rs  pdf_to_xlsx.rs  pptx_to_pdf.rs  xlsx_to_pdf.rs
crates/localpdf-core/src/engine/: image.rs  lopdf.rs  mod.rs  pdfium.rs
crates/localpdf-core/src/tools/: compress.rs  convert.rs  crop.rs  extract_pages.rs  merge.rs  mod.rs  ocr.rs  organize.rs  page_numbers.rs  protect.rs  remove_pages.rs  repair.rs  rotate.rs  split.rs  stubs.rs  unlock.rs  watermark.rs
crates/localpdf-core/src/utils/: info.rs  mod.rs  paths.rs  progress.rs  tempdir.rs
crates/localpdf-core/tests/: test_compress.rs  test_convert.rs  test_crop.rs  test_del.rs  test_docx_to_pdf.rs  test_engine.rs  test_error.rs  test_extract_pages.rs  test_html_to_pdf.rs  test_images_to_pdf.rs  test_merge.rs  test_ocr.rs  test_organize.rs  test_page_numbers.rs  test_pdf_to_docx.rs  test_pdf_to_html.rs  test_pdf_to_images.rs  test_pdf_to_pptx.rs  test_pdf_to_xlsx.rs  test_pptx_to_pdf.rs  test_protect.rs  test_remove_pages.rs  test_repair.rs  test_rotate.rs  test_split.rs  test_unlock.rs  test_utils.rs  test_watermark.rs  test_xlsx_to_pdf.rs
crates/localpdf-core/tests/fixtures/: dummy_basic.xlsx
ui/: add-langs.js  check_cov.cjs  eslint.config.js  index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.setup.ts
ui/src/: App.css  App.tsx  index.css
ui/src/adapters/: tauriAdapter.test.ts  tauriAdapter.ts
ui/src/components/: BatchDropZone.tsx  CommandPalette.tsx  DropZone.tsx  FileCard.tsx  FileList.tsx  Layout.tsx  PdfPreview.tsx  PdfRangeVisualizer.test.tsx  PdfRangeVisualizer.tsx  PdfThumbnail.test.tsx  PdfThumbnail.tsx  ProgressCard.tsx  RangeInputEditor.test.tsx  RangeInputEditor.tsx  ResultCard.tsx  SettingsDrawer.tsx  Sidebar.tsx  SortableFileList.tsx  ToolWrapper.test.tsx  ToolWrapper.tsx
ui/src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Label.tsx  Progress.tsx  Select.tsx
ui/src/config/: tools.ts
ui/src/i18n/: index.test.tsx  index.tsx
ui/src/lib/: tauri.ts
ui/src/pages/: CompressTool.test.tsx  CompressTool.tsx  ConvertTool.test.tsx  ConvertTool.tsx  Dashboard.test.tsx  Dashboard.tsx  InfoTool.test.tsx  InfoTool.tsx  MergeTool.test.tsx  MergeTool.tsx  OcrTool.test.tsx  OcrTool.tsx  OtherTools.test.tsx  OtherTools.tsx  ProtectTool.test.tsx  ProtectTool.tsx  RotateTool.test.tsx  RotateTool.tsx  SplitTool.test.tsx  SplitTool.tsx  UnlockTool.test.tsx  UnlockTool.tsx
ui/src/pages/convert/: ConvertPdf.tsx  PdfInfo.tsx  PdfThumbnail.tsx
ui/src/pages/edit/: CropPdf.tsx  PageNumbers.tsx  RotatePdf.tsx  Watermark.tsx
ui/src/pages/ocr/: OcrPdf.tsx  RepairPdf.tsx
ui/src/pages/organize/: CompressPdf.tsx  ExtractPages.tsx  MergePdf.tsx  OrganizePdf.tsx  RemovePages.tsx  SplitPdf.tsx
ui/src/pages/security/: ProtectPdf.tsx  UnlockPdf.tsx
ui/src/pages/utility/: CleanupTemp.tsx
ui/src/store/: useAppStore.ts
ui/src/styles/: globals.css
ui/src/types/: index.ts
