[workspace]
resolver = "2"
members = ["crates/localpdf-core", "crates/localpdf-cli", "crates/localpdf-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Batuhan"]
license = "MIT"
repository = "https://github.com/okullubatuhan/localpdf"

[workspace.dependencies]
# PDF engines - using lopdf for core operations, commented out until PDFium setup
# pdfium-render requires PDFium binary to be installed; see README for setup instructions
# pdfium-render = "0.9"

# Prefer lopdf for PDF manipulation (pure Rust)
lopdf = "0.34"
printpdf = "0.7"

# Image processing
image = "0.25"
oxipng = "9"

# OCR (requires leptonica/tesseract - install via vcpkg on Windows)
# leptess = "0.14"

# Office format parsing
docx-rs = "0.4"
calamine = "0.26"
umya-spreadsheet = "2"
quick-xml = "0.36"
zip = "2"
html5ever = "0.27"

# Compression
flate2 = "1"

# Parallelism
rayon = "1"

# Async & serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"
log = "0.4"

# Utilities
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
bytesize = "1"

# CLI (localpdf-cli only)
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
comfy-table = "7"
clap_complete = "4"
human-panic = "2"

# Tauri (localpdf-app only)
tauri = { version = "2", features = ["native-tls"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Encryption
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
rand = "0.8"

# Fonts
fontdb = "0.22"
rusttype = "0.9"