[package]
name = "localpdf-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Core library
localpdf-core.path = "../localpdf-core"

# Tauri
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-updater.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]